Your Company to Wepozt Company

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="tImgContainer">
             <img src="pexels-nick-kwan-2745255.jpg" alt="">
             <div class="logoContainer">
-                <h1>Your Company</h1>
+                <h1>Wepozt Company</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam accusamus possimus blanditiis aliquam perferendis recusandae magnam doloribus ipsum soluta itaque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio repudiandae repellendus alias quos eligendi voluptatum, ea enim esse qui libero.</p>
             </div>
         </div>
